--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,5 @@ apache-airflow-providers-amazon==8.3.1
 apache-airflow-providers-cncf-kubernetes==7.3.0
 apache-airflow-providers-postgres==5.5.2
 astro-provider-venv
+
+pytest
